--- a/src/pages/setting-home/setting-home.html
+++ b/src/pages/setting-home/setting-home.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content class="setting-home">
+<ion-content class="setting-home" padding>
   <ion-item-group>
     <ion-item-divider color="primary">App setting</ion-item-divider>
     <ion-item (click)="getSettingView('synchronizationSetting')">
