--- a/src/pages/dash-board-home/dash-board-home.html
+++ b/src/pages/dash-board-home/dash-board-home.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content >
+<ion-content  padding class="dashboardHome">
 
   <div *ngIf="loadingData">
     <ion-list>
@@ -50,5 +50,4 @@
       </ion-grid>
     </div>
   </div>
-
 </ion-content>
