--- a/src/pages/data-set-selection/data-set-selection.html
+++ b/src/pages/data-set-selection/data-set-selection.html
@@ -10,23 +10,21 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content  class = "dataEntryFormSelection">
+<ion-content  class = "dataEntryFormSelection" padding>
 
   <ion-searchbar animated="true"autocomplete="on"  (ionInput)="getFilteredList($event)"></ion-searchbar>
-  <ion-grid>
-    <ion-row>
-      <ion-col width="100">
-        <ion-list>
-          <ion-item *ngFor="let dataSet of dataSetsList"   (click)="setSelectedDataSet(dataSet)">
-            <ion-icon name="list" item-left></ion-icon>
-            <span (click)="setSelectedDataSet(orgUnit)" [color]="(currentSelectedDataSetName == dataSet.name) ?'current' : 'dark'">{{ dataSet.name }}</span>
-          </ion-item>
-          <ion-item *ngIf = "dataSetsList.length == 0">
-            There is no Data entry form to select
-          </ion-item>
-        </ion-list>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <ion-row>
+    <ion-col width="100">
+      <ion-list>
+        <ion-item *ngFor="let dataSet of dataSetsList"   (click)="setSelectedDataSet(dataSet)">
+          <ion-icon name="list" item-left></ion-icon>
+          <span (click)="setSelectedDataSet(orgUnit)" [color]="(currentSelectedDataSetName == dataSet.name) ?'current' : 'dark'">{{ dataSet.name }}</span>
+        </ion-item>
+        <ion-item *ngIf = "dataSetsList.length == 0">
+          There is no Data entry form to select
+        </ion-item>
+      </ion-list>
+    </ion-col>
+  </ion-row>
 
 </ion-content>
