--- a/src/pages/organisation-units/organisation-units.html
+++ b/src/pages/organisation-units/organisation-units.html
@@ -11,7 +11,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class = "organisation-units">
+<ion-content class = "organisation-units" padding>
   <div *ngIf="loadingData">
     <ion-list>
       <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
