--- a/src/pages/setting-detail/setting-detail.html
+++ b/src/pages/setting-detail/setting-detail.html
@@ -13,73 +13,60 @@
 </ion-header>
 
 
-<ion-content class="settingDetail">
+<ion-content class="settingDetail" padding>
 
   <div *ngIf="loadingData">
-    <ion-grid>
-      <ion-row>
-        <ion-col width="100">
-          <ion-list>
-            <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
-              {{ message }}
-              <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right color="primary"></ion-icon>
-              <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
-                <ion-spinner name="crescent" color="secondary"></ion-spinner>
-              </div>
-            </ion-item>
-          </ion-list>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+    <ion-list>
+      <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
+        {{ message }}
+        <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right color="primary"></ion-icon>
+        <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
+          <ion-spinner name="crescent" color="secondary"></ion-spinner>
+        </div>
+      </ion-item>
+    </ion-list>
   </div>
 
   <div *ngIf="!loadingData">
-    <ion-grid>
-      <ion-row>
-        <ion-col width="100">
-          <div *ngIf="settingKey =='dataEntrySetting'">
-            <ion-list>
-              <ion-item>
-                <ion-label>Form Label</ion-label>
-                <ion-select [(ngModel)]="dataEntrySetting.label" interface="action-sheet">
-                  <ion-option value="displayName">DHIS2 Display Name</ion-option>
-                  <ion-option value="formName">DHIS2 Form Name</ion-option>
-                </ion-select>
-              </ion-item>
-              <ion-item>
-                <ion-label floating>Max Data Element per section </ion-label>
-                <ion-input type="number"  min="1" [(ngModel)]="dataEntrySetting.maxDataElementOnDefaultForm"></ion-input>
-              </ion-item>
-            </ion-list>
-          </div>
-          <div *ngIf="settingKey =='synchronizationSetting'">
-            <ion-list>
-              <ion-item>
-                <ion-label floating>Synchronization time</ion-label>
-                <ion-input type="number"  min="1" [(ngModel)]="synchronizationSetting.time"></ion-input>
-              </ion-item>
-              <ion-item>
-                <ion-label>Type</ion-label>
-                <ion-select [(ngModel)]="synchronizationSetting.timeType" interface="action-sheet">
-                  <ion-option value="minutes">Minute(s)</ion-option>
-                  <ion-option value="hours">Hour(s)</ion-option>
-                </ion-select>
-              </ion-item>
-            </ion-list>
-          </div>
-        </ion-col>
+    <ion-row>
+      <ion-col width="100">
+        <div *ngIf="settingKey =='dataEntrySetting'">
+          <ion-list>
+            <ion-item>
+              <ion-label>Form Label</ion-label>
+              <ion-select [(ngModel)]="dataEntrySetting.label" interface="action-sheet">
+                <ion-option value="displayName">DHIS2 Display Name</ion-option>
+                <ion-option value="formName">DHIS2 Form Name</ion-option>
+              </ion-select>
+            </ion-item>
+            <ion-item>
+              <ion-label floating>Max Data Element per section </ion-label>
+              <ion-input type="number"  min="1" [(ngModel)]="dataEntrySetting.maxDataElementOnDefaultForm"></ion-input>
+            </ion-item>
+          </ion-list>
+        </div>
+        <div *ngIf="settingKey =='synchronizationSetting'">
+          <ion-list>
+            <ion-item>
+              <ion-label floating>Synchronization time</ion-label>
+              <ion-input type="number"  min="1" [(ngModel)]="synchronizationSetting.time"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label>Type</ion-label>
+              <ion-select [(ngModel)]="synchronizationSetting.timeType" interface="action-sheet">
+                <ion-option value="minutes">Minute(s)</ion-option>
+                <ion-option value="hours">Hour(s)</ion-option>
+              </ion-select>
+            </ion-item>
+          </ion-list>
+        </div>
+      </ion-col>
     </ion-row>
-      <ion-row>
-        <ion-col width="100">
-          <button ion-button full (click)="saveSetting()">Save </button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-
-
-
-
+    <ion-row>
+      <ion-col width="100">
+        <button ion-button full (click)="saveSetting()">Save </button>
+      </ion-col>
+    </ion-row>
   </div>
-
 
 </ion-content>
