--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -36,24 +36,36 @@
             <h2>{{ entry.key }}</h2>
             <p>{{ entry.value }}</p>
           </ion-item>
+        </ion-item-group>
+        <ion-list></ion-list>
+        <ion-item-group>
           <ion-item-divider color="primary">
             <b>Assigned Organisation Units</b>
           </ion-item-divider>
           <ion-item *ngFor="let assignOrgUnit of  assignOrgUnits;let currentIndex = index">
             <p>{{ currentIndex + 1 }}&nbsp;.&nbsp;{{ assignOrgUnit }}</p>
           </ion-item>
+        </ion-item-group>
+        <ion-list></ion-list>
+        <ion-item-group>
           <ion-item-divider color="primary">
             <b>Assigned user roles</b>
           </ion-item-divider>
           <ion-item *ngFor="let userRole of userRoles;let currentIndex = index">
             <p>{{ currentIndex + 1 }}&nbsp;.&nbsp;{{ userRole }}</p>
           </ion-item>
+        </ion-item-group>
+        <ion-list></ion-list>
+        <ion-item-group>
           <ion-item-divider color="primary">
             <b>Assigned programs</b>
           </ion-item-divider>
           <ion-item *ngFor="let assignedProgram of assignedPrograms ;let currentIndex = index">
             <p>{{ currentIndex + 1 }}&nbsp;.&nbsp;{{ assignedProgram }}</p>
           </ion-item>
+        </ion-item-group>
+        <ion-list></ion-list>
+        <ion-item-group>
           <ion-item-divider color="primary">
             <b>Assigned forms</b>
           </ion-item-divider>
