--- a/src/pages/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry-form/data-entry-form.html
@@ -58,7 +58,16 @@
       <div *ngFor="let section of entryFormSections">
         <div *ngIf="section.id == currentPage">
           <div *ngFor="let dataElement of section.dataElements">
-            {{ dataElement.name }}<hr>
+            <div *ngFor="let categoryOptionCombos of dataElement.categoryCombo.categoryOptionCombos">
+              <div (click)="showTooltips(dataElement,categoryOptionCombos.name)" class="inputLabel">
+                <b>{{ getDisplayName(dataElement) }}<span *ngIf="dataElement.categoryCombo.name != 'default'">&nbsp;&nbsp;{{ categoryOptionCombos.name}}</span>&nbsp;&nbsp;</b>
+                        <span *ngIf="dataElement.description">
+                          &nbsp;&nbsp;<ion-icon name="help-circle"></ion-icon>
+                        </span>
+              </div>
+            </div>
+
+            <br>
           </div>
         </div>
       </div>
@@ -105,34 +114,23 @@
           </ion-col>
 
         </ion-row>
+        <ion-row>
+          <ion-col>
+            <button color="favorite" ion-button full [disabled] ="isDataSetCompleted" (click)="updateDataSetCompleteness()">
+              Complete
+            </button>
+          </ion-col>
+          <ion-col>
+            <button color="danger" ion-button full [disabled] = "!isDataSetCompleted" (click)="updateDataSetCompleteness()">
+              Undo Complete
+            </button>
+          </ion-col>
+        </ion-row>
       </ion-item-divider>
     </ion-item-group>
 
 
-    <!--<ion-card>-->
-      <!--<ion-card-content>-->
-        <!--<ion-row>-->
-          <!--<ion-col>-->
-            <!--<button color="primary" ion-button full clear small (click)="changePagination(currentPage - 1)">-->
-              <!--<ion-icon name="ios-arrow-back-outline"></ion-icon>-->
-            <!--</button>-->
-          <!--</ion-col>-->
-          <!--<ion-col>-->
-            <!--<button ion-button color="primary" full clear small >-->
-              <!--{{ paginationLabel }}-->
-            <!--</button>-->
-          <!--</ion-col>-->
-          <!--<ion-col >-->
-            <!--<button color="primary" ion-button full clear small (click)="changePagination(currentPage + 1)">-->
-              <!--<ion-icon name="ios-arrow-forward-outline"></ion-icon>-->
-            <!--</button>-->
-          <!--</ion-col>-->
-        <!--</ion-row>-->
-      <!--</ion-card-content>-->
-    <!--</ion-card>-->
 
-    <!--<div class="dataEntryFormBody">-->
-      <!--<div style="position: absolute">-->
         <!--<ion-grid>-->
           <!--<ion-row>-->
             <!--<ion-col width="100">-->
@@ -244,65 +242,7 @@
           <!--</ion-row>-->
         <!--</ion-grid>-->
 
-        <!--<ion-card>-->
-          <!--<ion-card-content>-->
-            <!--<ion-row>-->
-              <!--<ion-col width-33>-->
-                <!--<button color="primary" ion-button full (click)="changePagination(currentPage - 1)">-->
-                  <!--Previous-->
-                <!--</button>-->
-              <!--</ion-col>-->
-              <!--<ion-col width-33>-->
-                <!--<button ion-button color="primary" full clear>-->
-                  <!--{{ paginationLabel }}-->
-                <!--</button>-->
-              <!--</ion-col>-->
-              <!--<ion-col width-33>-->
-                <!--<button color="primary" ion-button full (click)="changePagination(currentPage + 1)">-->
-                  <!--Next-->
-                <!--</button>-->
-              <!--</ion-col>-->
-            <!--</ion-row>-->
-          <!--</ion-card-content>-->
-        <!--</ion-card>-->
-
-        <!--<ion-card>-->
-          <!--<ion-card-content>-->
-
-            <!--<div *ngIf="isDataSetCompletenessUpdated">-->
-              <!--<div style="text-align: center;">-->
-                <!--<ion-spinner name="crescent" color="primary"></ion-spinner>-->
-              <!--</div>-->
-            <!--</div>-->
-
-            <!--<ion-row>-->
-              <!--<ion-col width-50>-->
-                <!--<button color="secondary" ion-button full *ngIf="!isDataSetCompleted" (click)="updateDataSetCompleteness()">-->
-                  <!--Complete-->
-                <!--</button>-->
-                <!--<button color="danger" ion-button full *ngIf="isDataSetCompleted" (click)="updateDataSetCompleteness()">-->
-                  <!--Undo Complete-->
-                <!--</button>-->
-              <!--</ion-col>-->
-              <!--<ion-col width-25>-->
-                <!--<button color="primary" ion-button full (click)="changePagination(0)">-->
-                  <!--First-->
-                <!--</button>-->
-              <!--</ion-col>-->
-              <!--<ion-col width-25>-->
-                <!--<button color="primary" ion-button full (click)="changePagination(entryFormSections.length -1)">-->
-                  <!--Last-->
-                <!--</button>-->
-              <!--</ion-col>-->
-            <!--</ion-row>-->
-
-            <!--<div *ngIf="isDataSetCompleted">Completed by: <b>{{ dataSetCompletenessInformation.name }}</b> at: <b>{{ dataSetCompletenessInformation.date }}</b></div>-->
-
-          <!--</ion-card-content>-->
-        <!--</ion-card>-->
-      <!--</div>-->
-
-    <!--</div>-->
+      
 
   </div>
 
