--- a/src/pages/event-capture-home/event-capture-home.html
+++ b/src/pages/event-capture-home/event-capture-home.html
@@ -28,6 +28,7 @@
 
   </div>
   <div *ngIf="!loadingData">
+
     <ion-row >
       <ion-col width="100">
         <button (click)="openOrganisationUnitModal()" ion-button full color="light">
@@ -44,6 +45,7 @@
         </div>
       </ion-col>
     </ion-row>
+
     <div *ngIf="selectedProgram">
       <div *ngIf="selectedProgram.categoryCombo">
         <div *ngIf="selectedProgram.categoryCombo.categories[0].name !='default'">
@@ -67,46 +69,63 @@
       </div>
     </div>
 
+    <!-- guide messages during parameter selection-->
     <div *ngIf="!isAllParameterSet">
-      <ion-card>
-        <ion-card-content>
-          <ion-icon name="help-circle" color="primary"></ion-icon> &nbsp;&nbsp;
-          <b>
-            {{ currentSelectionStatus.message }}<span *ngIf="currentSelectionStatus.message==''">Please Select all program dimensions</span>
-          </b>
-        </ion-card-content>
-      </ion-card>
+      <ion-row >
+        <ion-col width="100">
+          <ion-item-group >
+            <ion-item-divider>
+              <ion-icon name="help-circle" color="primary"></ion-icon> &nbsp;&nbsp;
+              <b>
+                {{ currentSelectionStatus.message }}<span *ngIf="currentSelectionStatus.message==''">Please Select all program dimensions</span>
+              </b>
+            </ion-item-divider>
+          </ion-item-group>
+          <ion-list></ion-list>
+        </ion-col>
+      </ion-row>
     </div>
 
     <div *ngIf="isAllParameterSet">
+
+      <!-- list options as well as register new event -->
       <ion-row>
-        <ion-col width-33>
+        <ion-col>
           <button ion-button full (click)="showFieldSelectionMenu()" color="light">
             <ion-icon name="grid"></ion-icon>
           </button>
         </ion-col>
-        <ion-col width-33>
-          <button ion-button full (click)="goToEventRegister()" color="secondary">
+        <ion-col>
+          <button ion-button full (click)="goToEventRegister()" color="favorite">
             <ion-icon name="add"></ion-icon>
           </button>
         </ion-col>
-        <ion-col width-33>
+        <ion-col>
           <button ion-button full [disabled]="true">
             <ion-icon name="settings"></ion-icon>
           </button>
         </ion-col>
-
       </ion-row>
 
-      <hr>
+      <ion-row>
+        <ion-col width="100">
+          <hr>
+        </ion-col>
+      </ion-row>
 
+      <!-- notification if no event list found from local as well login instance-->
       <div *ngIf="eventListSections.length == 0">
-        <ion-card >
-          <ion-card-content>
-            <p>There are no events, to register new event  <span (click)="goToEventRegister()" color="primary"><b>click here</b></span></p>
-          </ion-card-content>
-        </ion-card>
+        <ion-row>
+          <ion-col width="100">
+            <ion-item-group>
+              <ion-item-divider>
+                <p>There are no events, to register new event  <span (click)="goToEventRegister()" color="primary"><b>click here</b></span></p>
+              </ion-item-divider>
+            </ion-item-group>
+          </ion-col>
+        </ion-row>
       </div>
+
       <div *ngIf="eventListSections.length > 0">
         <!-- event list --->
         <div *ngFor="let section of eventListSections">
@@ -143,24 +162,68 @@
             </div>
           </div>
         </div>
+
+
         <!-- pagination -->
-        <ion-row >
-          <ion-col width-33>
-            <button color="primary" ion-button full (click)="changePagination(currentPage - 1)">
-              Previous
-            </button>
-          </ion-col>
-          <ion-col width-33>
-            <button ion-button color="primary" full clear>
-              {{ paginationLabel }}
-            </button>
-          </ion-col>
-          <ion-col width-33>
-            <button color="primary" ion-button full (click)="changePagination(currentPage + 1)">
-              Next
-            </button>
-          </ion-col>
-        </ion-row>
+        <ion-item-group>
+          <ion-item-divider>
+            <ion-row>
+              <ion-col>
+                <button color="dark" ion-button full clear small (click)="changePagination(0)">
+                  <ion-icon name="ios-arrow-back-outline"></ion-icon>
+                  <ion-icon name="ios-arrow-back-outline"></ion-icon>
+                  <ion-icon name="ios-arrow-back-outline"></ion-icon>
+                  <ion-icon name="ios-arrow-back-outline"></ion-icon>
+                </button>
+              </ion-col>
+              <ion-col>
+                <button color="dark" ion-button full clear small (click)="changePagination(currentPage - 1)">
+                  <ion-icon name="ios-arrow-back-outline"></ion-icon>
+                  <ion-icon name="ios-arrow-back-outline"></ion-icon>
+                </button>
+              </ion-col>
+              <ion-col>
+                <button ion-button color="dark" full clear small >
+                  {{ paginationLabel }}
+                </button>
+              </ion-col>
+              <ion-col >
+                <button color="dark" ion-button full clear small (click)="changePagination(currentPage + 1)">
+                  <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+                  <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+                </button>
+              </ion-col>
+
+              <ion-col >
+                <button color="dark" ion-button full clear small (click)="changePagination(entryFormSections.length -1)">
+                  <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+                  <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+                  <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+                  <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+                </button>
+              </ion-col>
+
+            </ion-row>
+          </ion-item-divider>
+        </ion-item-group>
+        <!-- pagination -->
+        <!--<ion-row >-->
+          <!--<ion-col width-33>-->
+            <!--<button color="primary" ion-button full (click)="changePagination(currentPage - 1)">-->
+              <!--Previous-->
+            <!--</button>-->
+          <!--</ion-col>-->
+          <!--<ion-col width-33>-->
+            <!--<button ion-button color="primary" full clear>-->
+              <!--{{ paginationLabel }}-->
+            <!--</button>-->
+          <!--</ion-col>-->
+          <!--<ion-col width-33>-->
+            <!--<button color="primary" ion-button full (click)="changePagination(currentPage + 1)">-->
+              <!--Next-->
+            <!--</button>-->
+          <!--</ion-col>-->
+        <!--</ion-row>-->
       </div>
     </div>
 
