--- a/src/pages/event-field-selection-menu/event-field-selection-menu.html
+++ b/src/pages/event-field-selection-menu/event-field-selection-menu.html
@@ -20,23 +20,31 @@
 
 <ion-content class="eventListSelection" padding>
     <ion-row>
-      <ion-col width="50">
+      <ion-col >
         <button ion-button full (click)="onSavingChanges()">Update</button>
       </ion-col>
-      <ion-col width="50">
+      <ion-col >
         <button ion-button full (click)="autoSelect('selectAll')" *ngIf="!hasAllSelected"> Select All</button>
         <button ion-button full (click)="autoSelect('unSelectAll')" *ngIf="hasAllSelected">Un-select all</button>
       </ion-col>
     </ion-row>
-    <div *ngIf="hasDataLoaded" padding>
-      <ion-list >
-        <div *ngFor="let dataElementsId of dataElementsIds">
-          <ion-item>
-            <ion-label>{{ dataElementMapper[dataElementsId].name }}</ion-label>
-            <ion-checkbox [(ngModel)]="selectedDataElementIdsModel[dataElementsId]" color="favorite"></ion-checkbox>
-          </ion-item>
-        </div>
-      </ion-list>
-      <button ion-button full (click)="onSavingChanges()">Done</button>
+    <div *ngIf="hasDataLoaded">
+      <ion-row>
+        <ion-col >
+          <ion-list >
+            <div *ngFor="let dataElementsId of dataElementsIds">
+              <ion-item>
+                <ion-label>{{ dataElementMapper[dataElementsId].name }}</ion-label>
+                <ion-checkbox [(ngModel)]="selectedDataElementIdsModel[dataElementsId]" color="favorite"></ion-checkbox>
+              </ion-item>
+            </div>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col >
+          <button ion-button full (click)="onSavingChanges()">Done</button>
+        </ion-col>
+      </ion-row>
     </div>
 </ion-content>
