align form fields for entry form

--- a/src/pages/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry-form/data-entry-form.html
@@ -80,7 +80,7 @@
                 </ion-item>
               </div>
 
-              <!-- not option set entry form fields -->
+              <!-- non option set entry form fields -->
               <div *ngIf="!dataElement.optionSet">
                 <div *ngIf="dataElement.valueType == 'DATE'">
                   <ion-item>
