--- a/src/pages/event-capture-home/event-capture-home.html
+++ b/src/pages/event-capture-home/event-capture-home.html
@@ -114,7 +114,7 @@
       </ion-row>
 
       <!-- notification if no event list found from local as well login instance-->
-      <div *ngIf="eventListSections.length == 0">
+      <div *ngIf="!hasEvents">
         <ion-row>
           <ion-col width="100">
             <ion-item-group>
@@ -126,45 +126,68 @@
         </ion-row>
       </div>
 
+      <!-- display events as table -->
+      <div style="overflow-x: auto">
+        <table *ngIf="tableFormat && hasEvents">
+          <thead>
+          <tr>
+            <th *ngFor="let header of tableFormat.header">{{header.name}}</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let row of tableFormat.rows" (click)="goToEventView(row)" >
+            <td *ngFor="let column of row.data">{{column}} </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <!--display events as card -->
+
       <div *ngIf="eventListSections.length > 0">
         <!-- event list --->
         <div *ngFor="let section of eventListSections">
           <div *ngIf="section.id == currentPage">
             <div *ngFor="let event of section.events">
-              <ion-card >
-                <ion-card-content>
-                  <p><b>Incident date</b>&nbsp;&nbsp;:&nbsp;&nbsp;{{ event.eventDate }}</p>
-                  <div *ngFor="let dataValue of event.dataValues">
-                    <div *ngIf="dataElementToDisplay[dataValue.dataElement]">
-                      <p><b>{{ dataElementToDisplay[dataValue.dataElement].name }}</b>&nbsp;&nbsp;:&nbsp;&nbsp;{{ dataValue.value }}</p>
-                    </div>
-                  </div>
-                  <p><b>Status</b>&nbsp;&nbsp;:&nbsp;&nbsp;
-                    <span *ngIf="event.syncStatus == 'new event' || event.syncStatus == 'not synced'" >Offline</span>
-                    <span *ngIf="!(event.syncStatus == 'new event' || event.syncStatus == 'not synced')" >Online</span>
-                  </p>
-                  <!-- edit or view event actions -->
-                  <ion-row>
-                    <ion-col >
-                      <button ion-button full (click)="goToEventView(event)">
-                        <ion-icon name="eye"></ion-icon>&nbsp;&nbsp;View
-                      </button>
-                    </ion-col>
-                    <ion-col >
-                      <button ion-button full (click)="gotToEditEvent(event)">
-                        <ion-icon name="create"></ion-icon>&nbsp;&nbsp;Edit
-                      </button>
-                    </ion-col>
-                  </ion-row>
+              <ion-row>
+                <ion-col width="100">
+                  <ion-item-group>
+                    <ion-item-divider>
+                      <p><b>Incident date</b>&nbsp;&nbsp;:&nbsp;&nbsp;{{ event.eventDate }}</p>
+                      <div *ngFor="let dataValue of event.dataValues">
+                        <div *ngIf="dataElementToDisplay[dataValue.dataElement]">
+                          <p><b>{{ dataElementToDisplay[dataValue.dataElement].name }}</b>&nbsp;&nbsp;:&nbsp;&nbsp;{{ dataValue.value }}</p>
+                        </div>
+                      </div>
+                      <p><b>Status</b>&nbsp;&nbsp;:&nbsp;&nbsp;
+                        <span *ngIf="event.syncStatus == 'new event' || event.syncStatus == 'not synced'" >Offline</span>
+                        <span *ngIf="!(event.syncStatus == 'new event' || event.syncStatus == 'not synced')" >Online</span>
+                      </p>
+                      <!-- edit or view event actions -->
+                      <ion-row>
+                        <ion-col >
+                          <button ion-button full (click)="goToEventView(event)">
+                            <ion-icon name="eye"></ion-icon>&nbsp;&nbsp;View
+                          </button>
+                        </ion-col>
+                        <ion-col >
+                          <button ion-button full (click)="gotToEditEvent(event)">
+                            <ion-icon name="create"></ion-icon>&nbsp;&nbsp;Edit
+                          </button>
+                        </ion-col>
+                      </ion-row>
+                    </ion-item-divider>
+                  </ion-item-group>
+                </ion-col>
+              </ion-row>
 
-                </ion-card-content>
-              </ion-card>
+
             </div>
           </div>
         </div>
 
         <!-- pagination -->
-        <ion-item-group>
+        <ion-item-group *ngIf="eventListSections.length > 0">
           <ion-item-divider>
             <ion-row>
               <ion-col>
@@ -205,24 +228,6 @@
             </ion-row>
           </ion-item-divider>
         </ion-item-group>
-        <!-- pagination -->
-        <!--<ion-row >-->
-          <!--<ion-col width-33>-->
-            <!--<button color="primary" ion-button full (click)="changePagination(currentPage - 1)">-->
-              <!--Previous-->
-            <!--</button>-->
-          <!--</ion-col>-->
-          <!--<ion-col width-33>-->
-            <!--<button ion-button color="primary" full clear>-->
-              <!--{{ paginationLabel }}-->
-            <!--</button>-->
-          <!--</ion-col>-->
-          <!--<ion-col width-33>-->
-            <!--<button color="primary" ion-button full (click)="changePagination(currentPage + 1)">-->
-              <!--Next-->
-            <!--</button>-->
-          <!--</ion-col>-->
-        <!--</ion-row>-->
       </div>
     </div>
 
